# load-balancer

./: Cargo.toml  README.md
benches/: bench_balancing_strategies.rs
src/: lib.rs  load_balancer.rs  main.rs  tracing.rs  worker.rs
src/load_balancer/: balancing_strategy.rs  metrics.rs  server.rs
