[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
axum = { version = "0.8.4", features = ["tokio"] }
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = { version = "0.6.4", features = ["trace"] }
