[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
axum = { version = "0.8.4", features = ["tokio"] }
uuid = { version = "1.17.0", features = ["v4"] }
tower = "*"
tower-http = { version = "0.6.4", features = ["trace"] }
reqwest = { version = "0.12.18", default-features = false, features = [
    "stream",
    "json",
] }
thiserror = "2.0.12"
http = "*"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itertools = "0.14.0"
futures = "0.3.31"
strum = "0.27.1"
strum_macros = "0.27.1"

# [dev-dependencies]
# criterion = { version = "0.6", features = ["html_reports"] }
#
# [[bench]]
# name = "bench_balancing_strategies"
# harness = false
